--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VenueOptions"></activity>
-        <activity android:name=".UpdatedVenues"></activity>
-        <activity android:name=".FinalVenue"></activity>
+        <activity android:name=".VenueOptions"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".UpdatedVenues"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".FinalVenue"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
